--- a/ET_A3/public/index.html
+++ b/ET_A3/public/index.html
@@ -1,11 +1,19 @@
 ﻿<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
+
+    <script src="javascripts/lib/angular.js"></script>
+    <script src="javascripts/lib/angular-route.js"></script>
+    <script src="javascripts/lib/angular-resource.js"></script>
+
     <title>ET_A3</title>
 </head>
 <body>
     index
+
+
+
 </body>
 </html>
