--- a/ET_A3/public/index.html
+++ b/ET_A3/public/index.html
@@ -1,19 +1,80 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" ng-app="a3App">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
 
+    <link href="stylesheets/bootstrap.css" rel="stylesheet" />
+
+    <script src="javascripts/lib/jquery.min.js"></script>
+    <script src="javascripts/lib/bootstrap.min.js"></script>
     <script src="javascripts/lib/angular.js"></script>
-    <script src="javascripts/lib/angular-route.js"></script>
     <script src="javascripts/lib/angular-resource.js"></script>
+    <script src="javascripts/lib/angular-route.js"></script>
+    <script src="javascripts/lib/ui-bootstrap-tpls-0.12.0.js"></script>
+    <script src="javascripts/appConfig.js"></script>
+    <script src="javascripts/controllers.js"></script>
 
     <title>ET_A3</title>
 </head>
 <body>
-    index
 
+    <div class="container">
 
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <h3>Assignment3</h3>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                            <a>
+                                Search by last name:
+                                <input ng-model="lastName" /> &nbsp;
+                                <label class="btn btn-primary" ng-click>Search</label>
+                            </a>
+
+                        </li>
+                        <li><a>About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li class="dropdown-header">Nav header</li>
+                                <li><a href="#">Separated link</a></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+                        <li><a href="../navbar-static-top/">Static top</a></li>
+                        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div><!--/.container-fluid -->
+        </nav>
+
+        <!-- Main component for a primary marketing message or call to action -->
+        <div class="jumbotron">
+            <div ng-view></div>
+
+        </div>
+
+    </div> <!-- /container -->
 
 </body>
 </html>
