--- a/ET_A3/public/index.html
+++ b/ET_A3/public/index.html
@@ -24,45 +24,29 @@
 
         <!-- Static navbar -->
         <nav class="navbar navbar-default navbar-static-top">
-            <div class="container-fluid">
+            <div class="container-fluid" ng-controller="navbarCtrl">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <h3>Assignment3</h3>
+                    <h4>Assignment3</h4>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active">
-                            <a>
-                                Search by last name:
-                                <input ng-model="lastName" /> &nbsp;
-                                <label class="btn btn-primary" ng-click>Search</label>
-                            </a>
-
+                            <form class="navbar-form">
+                                <input type="text" ng-model="lastName" placeholder="Search by last name" required /> &nbsp;
+                                <button type="submit" class="btn btn-primary" ng-click="searchByLastName()">Search</button>
+                            </form>
                         </li>
-                        <li><a>About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
+                        <li>
+                            <form class="navbar-form">
+                                <input type="text" ng-model="doctorName" placeholder="Search by doctor name" required /> &nbsp;
+                                <button type="submit" class="btn btn-primary" ng-click="searchByDoctor()">Search</button>
+                            </form>
                         </li>
                     </ul>
+
+
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-                        <li><a href="../navbar-static-top/">Static top</a></li>
-                        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
