changed navbar type

--- a/ET_A3/public/index.html
+++ b/ET_A3/public/index.html
@@ -24,11 +24,12 @@
 
         <!-- Static navbar -->
         <nav class="navbar navbar-default navbar-static-top">
-            <div class="container-fluid" ng-controller="navbarCtrl">
+
+            <div class="container" ng-controller="navbarCtrl">
                 <div class="navbar-header">
                     <h4>Assignment3</h4>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
+                <div id="navbar" class="nav-tabs">
                     <ul class="nav navbar-nav">
                         <li class="active">
                             <form class="navbar-form">
@@ -51,10 +52,6 @@
                         </li>
                     </ul>
 
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-                    </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
         </nav>
