--- a/ET_A3/public/index.html
+++ b/ET_A3/public/index.html
@@ -27,7 +27,7 @@
 
             <div class="container" ng-controller="navbarCtrl">
                 <div class="navbar-header">
-                    <h4>Assignment3</h4>
+                    <h4>Assignment3&4</h4>
                 </div>
                 <div id="navbar" class="nav-tabs">
                     <ul class="nav navbar-nav">
